--- a/LOL_UI/.classpath
+++ b/LOL_UI/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/surca/Desktop/mysql-connector-java-5.1.46/mysql-connector-java-5.1.46-bin.jar"/>
+	<classpathentry kind="lib" path="e_lib/mysql-connector-java-5.1.46-bin.jar"/>
+	<classpathentry kind="lib" path="e_lib/riot-api-java.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
