--- a/LOL_UI/.classpath
+++ b/LOL_UI/.classpath
@@ -6,5 +6,7 @@
 	<classpathentry kind="lib" path="e_lib/riot-api-java.jar"/>
 	<classpathentry kind="lib" path="e_lib/mysql-connector-java-5.1.46-bin.jar"/>
 	<classpathentry kind="lib" path="e_lib/mysql-connector-java-5.1.46.jar"/>
+	<classpathentry kind="lib" path="e_lib/gson-2.8.5-javadoc.jar"/>
+	<classpathentry kind="lib" path="e_lib/gson-2.8.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
